<resources>
    <string name="app_name">Yavin Intent API</string>
    <string name="tab_payment">Payment</string>
    <string name="tab_print">Print</string>
    <string name="tab_transactions">Transactions</string>
    <string name="tab_share">Share</string>

    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="fetch_transactions">Fetch</string>
    <string name="start_payment">Launch payment</string>
    <string name="hint_print_data">data to print</string>
    <string name="amount">Amount in cents (1€ = 100)</string>
    <string name="gift_amount">Gift amount in cents</string>
    <string name="reference">Reference</string>
    <string name="receipt_ticket">Receipt Ticket</string>
    <string name="customer">Customer</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="hint_email">example@email.com</string>
    <string name="phone_number">Phone number</string>
    <string name="hint_phone_number">+33612345678</string>
    <string name="transaction_id">ID of transaction (check transactions api)</string>

    <string-array name="api_versions">
        <item>V1</item>
        <item>V4</item>
    </string-array>

    <string-array name="transaction_type">
        <item>Debit</item>
        <item>Reversal</item>
    </string-array>

    <string-array name="print_format">
        <item>text</item>
        <item>escpos</item>
    </string-array>

    <string-array name="medium_share">
        <item>email</item>
        <item>sms</item>
        <item>print</item>
    </string-array>
</resources>