<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <Spinner
            android:id="@+id/apiSpinner"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:entries="@array/api_versions" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number" />

        <EditText
            android:id="@+id/giftAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gift_amount"
            android:inputType="number" />

        <Spinner
            android:id="@+id/transactionTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/transaction_type" />

        <EditText
            android:id="@+id/referenceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reference" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/receipt_ticket"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <Spinner
            android:id="@+id/formatSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/print_format" />

        <EditText
            android:id="@+id/dataEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_print_data" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/customer"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <EditText
            android:id="@+id/firstnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/lastnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/startPaymentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:text="@string/start_payment" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:focusable="true"
            android:longClickable="true"
            android:textIsSelectable="true" />

    </LinearLayout>

</ScrollView>